# Meta-GKAN-INR

./: .gitignore  Compare Img.py  README.md  logging.conf  main.py  pyproject.toml  requirements.txt
Flowchart/: main.drawio
config/: config.yaml  gkan_meta.yaml  gkan_meta_100.yaml  gkan_meta_150.yaml  gkan_meta_200.yaml  gkan_meta_260.yaml  gkan_no_meta.yaml  gkan_no_meta_100.yaml  gkan_no_meta_150.yaml  gkan_no_meta_200.yaml  gkan_no_meta_260.yaml  siren.yaml  siren_170.yaml  siren_260.yaml  siren_346.yaml  siren_450.yaml  test.yaml
config/.ipynb_checkpoints/: gkan_meta_260-checkpoint.yaml
config/meta_learn/: test.yaml
configs/: config.yaml
configs/learn/: big.yaml  learn.yaml  test.yaml
configs/meta_learn/: meta_learner.yaml
notebooks/: draw_psnr_to_step.ipynb  draw_psnr_to_step_new_schema.ipynb
scripts/: Compare Img.py
src/GKAN/: demo_image.py
src/learn/: __init__.py  learn.py
src/logging/: __init__.py  log_drawer.py  tqdm_logging.py  train_logger.py
src/meta_gkan_inr/: learn.py  learn_colorwise.py  meta_learn.py  model.py  run_all.sh
src/meta_learn/: __init__.py  meta_learn.py
src/models/: __init__.py  model.py
src/utils/: utility.py
